# portfolio-streamlit

./: README.md  pyproject.toml
data/: projects.json
src/streamlit/: app.py
src/streamlit/components/: home.py  projects.py  sidebar.py
tests/: test_app.py
