[tool.poetry]
name = "portifolio-streamlit"
version = "0.1.0"
description = ""
authors = ["luizantoniont <luizzantonioneto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.41.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
flake8 = "^6.1.0"
mypy = "^1.7.1"